--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-app-polyfill": "^1.0.3",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "react-svg": "^10.0.20"
+    "react-svg": "^10.0.20",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
