--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-svg": "^10.0.20",
-    "prop-types": "latest"
+    "prop-types": "latest",
+    "react-slideshow-image": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
