--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.3",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "react-svg": "^10.0.20",
     "prop-types": "latest",
-    "react-slideshow-image": "latest"
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.4.0",
+    "react-slideshow-image": "^1.3.4",
+    "react-svg": "^10.0.26"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +34,6 @@
   },
   "devDependencies": {
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.1.2"
   }
 }
